# uniapp-wasm-test

./: package.json  pnpm-lock.yaml  readme.md  tsconfig.json  vite.config.ts
src/: pages.json
src/pages/index/: index.vue
wasm/: Cargo.toml
wasm/src/: lib.rs
