[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["no_std"]
no_std = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
hex = "0.4.3"
hmac = "0.12.1"
js-sys = "0.3.65"
md-5 = "0.10.6"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2.88"

wasm-bindgen-test = "0.3.38"

[dev.release]
lto = true
opt-level = "1"    # 0 1 2 3 s z
strip = true

[profile.release]
lto = true
opt-level = "s"
strip = true
panic = "abort"

[dev-dependencies]
wasm-bindgen-test = "0.3.38"

